--- a/www/adminRoot.html
+++ b/www/adminRoot.html
@@ -104,11 +104,14 @@
                     style="width:100%; background-color: white; border: 1px solid #ddd; text-align: left; outline: 2px solid rgb(197, 197, 197);">
                     <thead style="background-color: #337ab7; color: white">
                         <tr>
-                            <td style="width:50%">
+                            <td style="min-width:50px; max-width: 50%; width: 50%">
                                 <p>Nombre</p>
                             </td>
-                            <td style="min-width: 30px">
+                            <td style="min-width: 70px">
                                 <p style="text-align: left">Administrador</p>
+                            </td>
+                            <td style="max-width:10%; min-width: 130px">
+                                <p style="width: 100px !important">Acciones</p>
                             </td>
                         </tr>
                     </thead>
@@ -116,7 +119,7 @@
                     </tbody>
                     <tfoot style="background-color: #f4faff">
                         <tr style="text-align:center">
-                            <td colspan="2" style="padding: 5px;" class='tdfooter'><u style="cursor: pointer;"
+                            <td colspan="3" style="padding: 5px;" class='tdfooter'><u style="cursor: pointer;"
                                     id="createFolder"><span
                                         style="display: inline; margin-right: 6px; vertical-align: text-bottom;"><img
                                             src=" /images/116-user-plus.svg"></img></span><strong>Nueva Organización</strong></u>
@@ -164,6 +167,9 @@
             <div style='width: 95%; margin: auto'>
                 <a class="visto marca" id='edit' href="#">Editar</a>
             </div>
+            <div style='width: 95%; margin: auto'>
+                <a class="visto marca" id='edit' href="#">Desactivar</a>
+            </div>
         </div>
         <script>
 
@@ -183,6 +189,7 @@
             window.editing = false
             window.currentRow = undefined
             window.currentElement = undefined
+            window.orgs = []
             function showMenu(e){
                 e.preventDefault()
                 if(!$(e.target).hasClass("dataTables_empty")){
@@ -302,16 +309,30 @@
                         $($('.breadcrumb').toArray()[0]).append($("<li class='active' onclick=rollback("+current+",$(this))/>").append($(e.target).parent().children().first()[0].firstChild.innerText))
                         t.clear().draw()
                     }
-                    setTimeout(()=>{clicks=0},500)
-                    if((x[1].innerHTML+"").toLowerCase()!='carpeta'){
-                        insertDataDM($(e.target).parent().children().toArray().map(e => $(e)))
-                    }
+                    setTimeout(()=>{
+                        clicks=0
+                    },500)
+                    
                 }).contextmenu(showMenu)
             const getTableData = info => {
                 colNames = ['Nombre','Tipo', 'Tamaño', 'Última modificación']
                 data = info.reduce((z, e, i) => z + '<tr><td>' + colNames[i] + ':' + '</td><td>' + (i==0 ? e.children().last()[0].innerHTML: e.html()) + '</td></tr>', "")
                 return $("<div class='container' style='max-width: 90%'/>").append($('<table class="table table-bordered" style="max-width: 100%"/>').append(data)[0])
             }
+            const edit = e => {
+                    editing = true;
+                    if(e.preventDefault){
+                        e.preventDefault()
+                        window.rowElements = $(currentRow.closest('tr')).children().toArray().map(e => $(e))
+                    }
+                    else window.rowElements = $(e).closest('tr').children().toArray().map(e=>$(e)) 
+                    $("#nombreO").val(rowElements[0].html())
+                    $('#correo').val('').removeClass('error')
+                    $("#nombre").val(rowElements[1].html()).removeClass('error')
+                    $("#modalTittle").html("Modificar Organización")
+                    $('#modalRow').modal()
+
+                }
             $('document').ready(() => {
                 [$('#nombreO'), $('#correo'), $('#nombre')].forEach(e=>e.hover(r=>$(r.target).removeClass('error')))
                 var menu = $('#menuCapa')
@@ -321,6 +342,9 @@
                         header: true,
                         footer: true
                     },
+                    "columnDefs": [
+                        { "orderable": false, "targets": 2 }
+                    ],
                     language: {
                         "sProcessing": "Procesando...",
                         "sLengthMenu": "Mostrar _MENU_ registros",
@@ -344,7 +368,8 @@
                             "sSortAscending": ": Activar para ordenar la columna de manera ascendente",
                             "sSortDescending": ": Activar para ordenar la columna de manera descendente"
                         }
-                    }
+                    },
+                    "lengthMenu": [ 10, 25, 50]
                 });
                 $('#override').click(e=>{
                     solveConflicts(false)
@@ -375,52 +400,66 @@
                     var tableVec = t.data().toArray()
                     var msg = editing ? ['los datos no pueden permanecer iguales!', 'se ha modificado la Organización.']
                                       : ['Hay un nombre con conflicto!', 'se ha creado la Organización.']
-                    var flag = true, flag1 = false, flag2=false;
-                    if(tableVec.length&&!tableVec.every(e=>{return (flag = e[0]!=$("#nombreO").val().toUpperCase())&&e[1].split('/')[0].trim()!=$("#correo").val().toLowerCase()})){
-                        if(flag){
-                            msg[0] = 'El correo ingresado ya existe!'
-                            $('#correo').addClass('error')
-                            flag2=true;
+                    var flag = true, flag1 = false, flag2 = false;
+                    if (validateInstertOrg()) {
+                        if (tableVec.length && !tableVec.every(e => { return (flag = e[0] != $("#nombreO").val().toUpperCase()) && e[1]/*poner correo*/ != $("#correo").val().toLowerCase() })) {
+                            if (flag) {
+                                msg[0] = 'El correo ingresado ya existe!'
+                                $('#correo').addClass('error')
+                                flag2 = true;
+                            }
+                            else {
+                                flag1 = true
+                            }
+                            flag = false
                         }
-                        else{
-                            flag1=true
-                        }
-                        flag=false
-                    }
-                    if(validateInstertOrg()){
-                        if (!tableVec.length||
-                            flag||
-                            (tableVec.some(e=>e[0]==$("#nombreO").val().toUpperCase()&&e[1].split('/')[0].trim()!=$("#correo").val().toLowerCase())&&editing&&flag1&&!flag2)
-                            ) {
-                                if (editing) {
-                                    t.row($(currentRow.closest('tr'))).remove().draw(false)
-                                    editing = false
+
+                        if (!tableVec.length ||
+                            flag ||
+                            (tableVec.some(e => e[0] == $("#nombreO").val().toUpperCase() && e[1]/*poner correo*/ != $("#correo").val().toLowerCase()) && editing && flag1 && !flag2)
+                        ) {
+                            if (editing) {
+                                t.row($(currentRow.closest('tr'))).remove().draw(false)
+                                editing = false
+                            }
+                            fetch('/api/org',{
+                                method: 'POST',
+                                body: JSON.stringify({
+                                    org:{
+                                        name: $("#nombreO").val()
+                                    },
+                                    user: {
+                                        name: $("#nombre").val(),
+                                        email: $("#correo").val(),
+                                        password: 'changeThis',
+                                        type: 3
+                                    }
+                            }),
+                                headers: {
+                                    'Accept': 'application/json',
+                                    'Content-Type': 'application/json'
                                 }
-                                t.row.add([$('#nombreO').val().toUpperCase(), $('#correo').val().toLowerCase() + " / " + $('#nombre').val().toUpperCase()]).draw(false);
+                            }).then((e)=>{
+                                x=e.json()
+                                orgs.push(x)
+                                t.row.add([$('#nombreO').val().toUpperCase(), $('#nombre').val().toUpperCase(),"<div style='width: 100px !important;'><button class='btn btn-info btn-xs' onclick='edit(this,"+x.__id+")'>Editar</button><button style='margin-left:5px' class='btn btn-danger btn-xs' onclick='disable("+x.__id+")'>Desactivar</button></div>"]).node().id = x.__id;
+                                t.draw(false)
                                 $('#modalRow').modal('toggle');
                                 updateTableListener()
                                 hotsnackbar('hsdone', msg[1])
+                            })
                         }
-                        else{
-                            if(editing)
+                        else {
+                            if (editing)
                                 $('#correo').addClass('error')
-                            if(flag1)
+                            if (flag1)
                                 $('#nombreO').addClass('error')
                             hotsnackbar('hserror', msg[0])
-                        }
-                    }    
+                        }  
+                    }
                 })
-                $('#edit').click(e => {
-                    editing = true;
-                    e.preventDefault()
-                    window.rowElements = $(currentRow.closest('tr')).children().toArray().map(e => $(e))
-                    $("#nombreO").val(rowElements[0].html())
-                    $('#correo').val(rowElements[1].html().split('/')[0].trim()).removeClass('error')
-                    $("#nombre").val(rowElements[1].html().split('/')[1].trim()).removeClass('error')
-                    $("#modalTittle").html("Modificar Organización")
-                    $('#modalRow').modal()
-
-                })
+                
+                $('#edit').click(edit)
             })
 
         </script>
